--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,36 @@
-* {
-    margin: 0;
-    padding: 0;
+:root {
+    --color-green: #009933;
+    --color-white: #DFDFDF;
+    --color-black: #212529;
+}
+
+.menu {
+    margin-bottom: 25px;
+}
+
+.app {
+    margin-top: 25px;
+}
+
+.pagina {
+    border: solid 1px var(--color-white);
+    padding: 25px !important;
+}
+
+li.list-group-item.active {
+    background-color: #FFF;
+    border-color: var(--color-green);
+    border-left: solid 10px var(--color-green);
+}
+
+li a {
+    color: var(--color-black);
+}
+
+li a:hover {
+    text-decoration: none;
+}
+
+h4 {
+    color: var(--color-green) !important;
 }
